
syntax = "proto3";
// system_login_log 登录日志
package logger;
option go_package = "./logger";
import "google/protobuf/timestamp.proto";

// SystemLoginLogObject 数据对象
message SystemLoginLogObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //主键
	// @inject_tag: db:"username" json:"username"
	optional string username = 2; //用户账号
	// @inject_tag: db:"user_ip" json:"userIp"
	optional string user_ip = 3; //用户ip
	// @inject_tag: db:"user_agent" json:"userAgent"
	optional string user_agent = 4; //UA
	// @inject_tag: db:"login_time" json:"loginTime"
	google.protobuf.Timestamp login_time = 5; //登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 6; //渠道
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 7; //是否删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 8; //租户ID
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 9; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 10; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 11; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 12; //更新时间
}
// SystemLoginLogTotalResponse 列表数据总量
message SystemLoginLogTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemLoginLogCreateRequest 创建数据请求
message SystemLoginLogCreateRequest {
	SystemLoginLogObject data = 1;
}
// SystemLoginLogCreateResponse 创建数据响应
message SystemLoginLogCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemLoginLogDeleteRequest 删除数据请求
message SystemLoginLogDeleteRequest {
	// @inject_tag: db:"ids" json:"ids"
	bytes ids = 1; //主键
}
// SystemLoginLogDeleteResponse 删除数据响应
message SystemLoginLogDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemLoginLogRequest 查询单条数据请求
message SystemLoginLogRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //主键
}
// SystemLoginLogResponse 查询单条数据响应
message SystemLoginLogResponse {
	int64 code = 1;
	string msg = 2;
	SystemLoginLogObject data = 3;
}
// SystemLoginLogListRequest 列表数据
message SystemLoginLogListRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户账号
	// @inject_tag: db:"begin_login_time" json:"beginLoginTime"
	google.protobuf.Timestamp begin_login_time = 2; // 开始登录时间
	// @inject_tag: db:"finish_login_time" json:"finishLoginTime"
	google.protobuf.Timestamp finish_login_time = 3; // 结束登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 4; // 渠道

	// @inject_tag: db:"page_num" json:"pageNum"
	optional int64 page_num = 5;
	// @inject_tag: db:"page_size" json:"pageSize"
	optional int64 page_size = 6;
}

// SystemLoginLogListResponse 数据响应
message SystemLoginLogListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemLoginLogObject data = 3;
}
// SystemLoginLogListTotalRequest 列表数据
message SystemLoginLogListTotalRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户账号
	// @inject_tag: db:"begin_login_time" json:"beginLoginTime"
	google.protobuf.Timestamp begin_login_time = 2; // 开始登录时间
	// @inject_tag: db:"finish_login_time" json:"finishLoginTime"
	google.protobuf.Timestamp finish_login_time = 3; // 结束登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 4; // 渠道

}

// SystemLoginLogDropRequest 全部删除数据
message SystemLoginLogDropRequest {
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户账号
	// @inject_tag: db:"begin_login_time" json:"beginLoginTime"
	google.protobuf.Timestamp begin_login_time = 2; // 开始登录时间
	// @inject_tag: db:"finish_login_time" json:"finishLoginTime"
	google.protobuf.Timestamp finish_login_time = 3; // 结束登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 4; // 渠道
}
// SystemLoginLogDeleteResponse 删除数据响应
message SystemLoginLogDropResponse {
	int64 code = 1;
	string msg = 2;
}


// SystemLoginLogService 服务
service SystemLoginLogService{
	rpc SystemLoginLogCreate(SystemLoginLogCreateRequest) returns (SystemLoginLogCreateResponse);
	rpc SystemLoginLogDelete(SystemLoginLogDeleteRequest) returns (SystemLoginLogDeleteResponse);
	rpc SystemLoginLogDrop(SystemLoginLogDropRequest) returns (SystemLoginLogDropResponse);
	rpc SystemLoginLog(SystemLoginLogRequest) returns (SystemLoginLogResponse);
	rpc SystemLoginLogList(SystemLoginLogListRequest) returns (SystemLoginLogListResponse);
	rpc SystemLoginLogListTotal(SystemLoginLogListTotalRequest) returns (SystemLoginLogTotalResponse);
}
