
syntax = "proto3";
// system_login_log 登录日志
package login;
option go_package = "./login";
import "google/protobuf/timestamp.proto";

// SystemLoginLogObject 数据对象
message SystemLoginLogObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //主键
	// @inject_tag: db:"username" json:"username"
	optional string username = 2; //用户账号
	// @inject_tag: db:"user_ip" json:"userIp"
	optional string user_ip = 3; //用户ip
	// @inject_tag: db:"user_agent" json:"userAgent"
	optional string user_agent = 4; //UA
	// @inject_tag: db:"login_time" json:"loginTime"
	google.protobuf.Timestamp login_time = 5; //登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 6; //渠道
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 7; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 8; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 9; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 10; //更新时间
}
// SystemLoginLogTotalResponse 列表数据总量
message SystemLoginLogTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemLoginLogCreateRequest 创建数据请求
message SystemLoginLogCreateRequest {
	SystemLoginLogObject data = 1;
}
// SystemLoginLogCreateResponse 创建数据响应
message SystemLoginLogCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemLoginLogUpdateRequest 更新数据请求
message SystemLoginLogUpdateRequest {
	// @inject_tag: db:"system_login_log_id" json:"systemLoginLogId"
	int64 system_login_log_id = 1; //主键
	SystemLoginLogObject data = 2;
}
// SystemLoginLogUpdateResponse 更新数据响应
message SystemLoginLogUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemLoginLogDeleteRequest 删除数据请求
message SystemLoginLogDeleteRequest {
	// @inject_tag: db:"system_login_log_id" json:"systemLoginLogId"
	int64 system_login_log_id = 1; //主键
}
// SystemLoginLogDeleteResponse 删除数据响应
message SystemLoginLogDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemLoginLogRequest 查询单条数据请求
message SystemLoginLogRequest {
	// @inject_tag: db:"system_login_log_id" json:"systemLoginLogId"
	int64 system_login_log_id = 1; //主键
}
// SystemLoginLogResponse 查询单条数据响应
message SystemLoginLogResponse {
	int64 code = 1;
	string msg = 2;
	SystemLoginLogObject data = 3;
}
// SystemLoginLogListRequest 列表数据
message SystemLoginLogListRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户账号
	// @inject_tag: db:"login_time" json:"loginTime"
	google.protobuf.Timestamp login_time = 2; // 登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 3; // 渠道

	// @inject_tag: db:"page_num" json:"pageNum"
	optional int64 page_num = 4;
	// @inject_tag: db:"page_size" json:"pageSize"
	optional int64 page_size = 5;
}

// SystemLoginLogListResponse 数据响应
message SystemLoginLogListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemLoginLogObject data = 3;
}
// SystemLoginLogListTotalRequest 列表数据
message SystemLoginLogListTotalRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户账号
	// @inject_tag: db:"login_time" json:"loginTime"
	google.protobuf.Timestamp login_time = 2; // 登录时间
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 3; // 渠道

}


// SystemLoginLogService 服务
service SystemLoginLogService{
	rpc SystemLoginLogCreate(SystemLoginLogCreateRequest) returns (SystemLoginLogCreateResponse);
	rpc SystemLoginLogUpdate(SystemLoginLogUpdateRequest) returns (SystemLoginLogUpdateResponse);
	rpc SystemLoginLogDelete(SystemLoginLogDeleteRequest) returns (SystemLoginLogDeleteResponse);
	rpc SystemLoginLog(SystemLoginLogRequest) returns (SystemLoginLogResponse);
	rpc SystemLoginLogList(SystemLoginLogListRequest) returns (SystemLoginLogListResponse);
	rpc SystemLoginLogListTotal(SystemLoginLogListTotalRequest) returns (SystemLoginLogTotalResponse);
}
